# fastapi-library

./: .gitignore  pyproject.toml
fastapi_library/: main.py
