[tool.poetry]
name = "fastapi-library"
version = "0.1.0"
description = "A basic FastAPI project for managing books."
authors = ["Adrien Cohen <127618020+adrienckr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
